# libdiabetes

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .stestr.conf  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
ci/: appveyor-download.py
doc/source/: installation.rst  usage.rst
doc/source/reference/: libdiabetes.rst
docs/: conf.py
docs/reference/: index.rst
libdiabetes/: __init__.py  __main__.py  cli.py
libdiabetes/tests/: test_libdiabetes.py
src/libdiabetes/: __main__.py  cli.py
tests/: test_libdiabetes.py
