[metadata]
name = libdiabetes
summary =  A parallel Python test runner built around subunit
description-file =
    README.rst
author = Masayuki Igawa
author-email = masayuki@igawa.io
home-page = http://libdiabetes.readthedocs.io/en/latest/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Library
    Topic :: Software Development :: Bio Chemistry
project_urls =
    Documentation = https://libdiabetes.readthedocs.io
    Source Code = https://github.com/masayukig/python-libdiabetes
    Bug Tracker = https://github.com/masayukig/python-libdiabetes/issues
requires-python = >=2.7


[files]
packages =
    libdiabetes

[entry_points]
console_scripts =
    libdiabetes = libdiabetes.cli:main


[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1
warning-is-error = 1

[upload_sphinx]
upload-dir = doc/build/html
